# FIRES

./: .gitattributes  .gitignore  250607_scint_mode_psn_sc_1.57_seed_26_PA_0.00.pkl  README.md  genfrb.py  line_profile.txt  main.py  memory_profile.txt  plotfns.py  processfrb.py  pyproject.toml  requirements.txt  utils.py
FRB_SIM.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
bash/: fires_loop_191001.sh  fires_loop_240318A.sh  fires_n_loop.sh  l_n.sh  pa.sh  run_191001.sh  run_fires.sh
examples/: FRB_20191001A_example.ipynb  FRB_20191001A_sweep.ipynb
examples/20191001A/: FRB_20191001A_example.ipynb  FRB_20191001A_sweep.ipynb  fires.toml  fires_loop_191001.sh  make_lvpa.sh  plotparams.toml  run_191001.sh
examples/20240318A/: fires.toml  fires_loop_240318A.sh  make_lvpa.sh  plot_pali_stats_summary.py  plotparams.toml  run_240318A.sh
frb_sim.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
frb_sim/scripts/: basicfns.py  genfrb.py  obsparams.txt  utils.py
functions/: basicfns.py  genfns.py
output/: 191001_nn_mode_psn_sc_0.00_seed_3_PA_20.00.pkl  191001_nn_mode_psn_sc_1.78_seed_3_PA_20.00.pkl
paper/: FRB240728_gparams.txt  FRB_240728_obsparams.txt  gparams.txt  obsparams.txt
paper/180924B/: 180924B_mode_psn_sc_1.56_seed_5_nseed_None_PA_-10.00.pkl  180924B_mode_psn_sc_1.56_seed_6_nseed_None_PA_-10.00.pkl  180924B_mode_psn_sc_1.56_seed_6_nseed_None_PA_0.00.pkl  180924B_nn_mode_psn_sc_1.56_seed_5_nseed_None_PA_-10.00.pkl  180924B_nn_ns_mode_psn_sc_0.00_seed_6_nseed_None_PA_-10.00.pkl  180924B_nn_ns_mode_psn_sc_0.00_seed_6_nseed_None_PA_0.00.pkl  180924B_ns_mode_psn_sc_0.00_seed_5_nseed_None_PA_-10.00.pkl  180924B_ns_mode_psn_sc_0.00_seed_6_nseed_None_PA_-10.00.pkl  180924B_ns_mode_psn_sc_0.00_seed_6_nseed_None_PA_0.00.pkl  180924B_ns_nn_mode_psn_sc_0.00_seed_5_nseed_None_PA_-10.00.pkl  180924B_ns_nn_mode_psn_sc_0.00_seed_6_nseed_None_PA_-10.00.pkl  180924B_ns_nn_mode_psn_sc_1.56_seed_5_nseed_None_PA_-10.00.pkl  180924B_ns_nn_mode_psn_sc_1.56_seed_6_nseed_None_PA_-10.00.pkl  FRB_180924B_gparams.toml  FRB_180924B_obsparams.toml
paper/191001/: 191001_mode_psn_sc_1.78_seed_2_nseed_None_PA_20.00.pkl  191001_mode_psn_sc_1.78_seed_3_nseed_None_PA_20.00.pkl  191001_nn_mode_psn_sc_1.78_seed_2_nseed_None_PA_20.00.pkl  191001_nn_mode_psn_sc_1.78_seed_3_nseed_None_PA_20.00.pkl  191001_nn_ns_mode_psn_sc_0.00_seed_2_nseed_None_PA_20.00.pkl  fires.toml  gparams.toml  make_lvpa.sh  (+5 more)
scripts/: combine_sweeps.py  fires_loop_191001.sh  fires_loop_240318A.sh  genfns.py  genfrb.py  gparams.txt  obsparams.txt  plotfns.py  run_191001.sh  run_240318A.sh  utils.py
sim/: genfrb.py  plotfns.py  processfrb.py
simfrbs/: FRB230526_sc_0.01.pkl  FRB230526_sc_0.10.pkl  FRB230526_sc_0.50.pkl  FRB230526_sc_0.60.pkl  FRB230526_sc_1.00.pkl  FRB230526_sc_2.00.pkl  frb_sc_0.50.pkl
utils/: utils.py
(+496 files in other folders)
