[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fires"
version = "0.1.0"
description = "A package to simulate Fast Radio Bursts (FRBs) with scattering."
authors = [{ name = "Joel Balzan", email = "jbalzan.astro@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["FRB", "scattering", "simulations"]
dependencies = [
  "platformdirs>=3.0",
  'tomli>=2.0; python_version < "3.11"',
  "tomli-w>=1.0",
]

[project.urls]
Homepage = "https://github.com/JoelBalzan/FIRES"

[project.scripts]
fires = "fires.__main__:main"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fires.data" = ["*.toml", "*.txt"]